force-app/main/default/objects/cgcloud__Job_Definition_List_Account__c/cgcloud__Job_Definition_List_Account__c.object-meta.xml
<CustomObject>
    <description>Holds the details of the relationship between job definition list and customer.</description>
    <label>Activity Customer</label>
    <nameField>
        <displayFormat>JDLA-{0000}</displayFormat>
        <label>Activity Customer Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Activity Customers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>