force-app/main/default/objects/cgcloud__Job_Definition_List_Account__c/fields/cgcloud__Job_Definition_List__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Job_Definition_List__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Activity</label>
    <referenceTo>cgcloud__Job_Definition_List__c</referenceTo>
    <relationshipLabel>Activity Customers</relationshipLabel>
    <relationshipName>Job_Definition_List_Accounts</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>