force-app/main/default/objects/cgcloud__Job_Definition_List_Account__c/validationRules/cgcloud__Sales_Org_should_be_same_for_all_lookups.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Sales_Org_should_be_same_for_all_lookups</fullName>
    <active>true</active>
    <description>The Activity Customer, Activity and Customer must have the same Sales Org.</description>
    <errorConditionFormula>OR(( cgcloud__Account__r.cgcloud__Sales_Org__c ) &lt;&gt;  TEXT( cgcloud__Job_Definition_List__r.cgcloud__Sales_Org__c ),
TEXT( cgcloud__Sales_Org__c ) &lt;&gt; ( cgcloud__Account__r.cgcloud__Sales_Org__c ))</errorConditionFormula>
    <errorMessage>The Activity Customer, Activity and Customer must have the same Sales Org.</errorMessage>
</ValidationRule>